tests/fixtures/invalid/set_sub_int.py
# Cannot subtract Int from set
x: set[int] = {1, 2, 3} - 1
